[package]
name = "network-monitor-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3.29"
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "*"
url = "2.4.1"
